VPC-CNI下安全组实践/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeport-svc  # 关联您创建的NodePort Service
            port:
              number: 80        # Service端口
